Revision de JS y SCSS

--- a/css/scss/assets/_actividadesAprendizaje.scss
+++ b/css/scss/assets/_actividadesAprendizaje.scss
@@ -37,6 +37,17 @@
     margin: 0;
 }
 
+.tituloActividadAprendizaje{
+    padding: 10px 10px 0px 10px;
+    border-radius: 10px 10px 0 0;
+}
+
+.descActividadAprendizaje{
+    font-size: 18px;
+    padding: 0px 10px 10px 10px;
+    border-radius: 0 0 10px 10px;
+}
+
 .buttonDownloadActividadAprendizaje{
     margin: 20px 0 10px 0;
     padding: 10px;
