--- a/css/scss/assets/_navCustomized.scss
+++ b/css/scss/assets/_navCustomized.scss
@@ -118,6 +118,6 @@
 }
 
 li.indicator {
-  height: 5px !important;
-  background-color: #fff !important;
+  height: 4px !important;
+  background-color: #ac5c79 !important;
 }
