--- a/css/scss/assets/_textCustomized.scss
+++ b/css/scss/assets/_textCustomized.scss
@@ -1,3 +1,6 @@
+// @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+
 /*Textos*/
 .textoStandar {
   font-family: "Roboto", sans-serif;
@@ -10,6 +13,21 @@
 
 @media (max-width: 800px) {
   .textoStandar {
+    font-size: 1rem;
+  }
+}
+
+/*Textos tabla*/
+.textoStandarTable {
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 1.3rem;
+  font-weight: 400;
+  margin: 0 0 10px 0;
+  text-align: justify;
+}
+
+@media (max-width: 800px) {
+  .textoStandarTable {
     font-size: 1rem;
   }
 }
@@ -62,10 +80,10 @@
 }
 
 .textoTitulo {
-  font-family: "Roboto", sans-serif;
-  font-size: 2.3rem;
-  font-weight: 700;
-  margin: 0 0 10px 0;
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 800;
+  margin: 0 0 6px 0;
 }
 
 .textoGrande {
@@ -81,7 +99,7 @@
 
 @media (max-width: 800px) {
   .textoTitulo {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     font-weight: 500;
   }
 
@@ -97,7 +115,7 @@
 
 @media (max-width: 600px) {
   .textoTitulo {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     font-weight: 500;
     margin: 0;
   }
@@ -150,7 +168,7 @@
   font-weight: 800;
   font-size: 1.3rem;
   background-color: #ffffff;
-  color: #547264;
+  color: #794453;
   height: auto;
   display: inline;
 }
@@ -226,4 +244,12 @@
     font-weight: 500;
     margin: 0;
   }
+}
+
+blockquote{
+  margin: 0 0 20px 0 !important;
+  border-left: 5px solid #d894ab;
+  font-weight: 500 !important;
+  border-radius: 0 10px 10px 0;
+  padding: 20px;
 }
