--- a/css/scss/styles.scss
+++ b/css/scss/styles.scss
@@ -21,6 +21,10 @@
 @use "assets/_pushPin.scss";
 @use "assets/_actividadesAprendizaje.scss";
 @use "assets/_error.scss";
+@use "assets/_tablaStyles.scss";
+@use "assets/_collapsible.scss";
+@use "assets/_imageZoomed.scss";
+@use "assets/_linkToResource.scss";
 
 
 //Pages
@@ -30,9 +34,14 @@
 @use "pages/_glosario.scss";
 @use "pages/_manual.scss";
 @use "pages/_analitica.scss";
+@use "pages/referencia";
 
 //Fuentes
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 //Pagina default
 * {
