--- a/css/scss/styles.scss
+++ b/css/scss/styles.scss
@@ -25,6 +25,7 @@
 @use "assets/_collapsible.scss";
 @use "assets/_imageZoomed.scss";
 @use "assets/_linkToResource.scss";
+@use "assets/_cardsGlosario.scss";
 
 
 //Pages
