--- a/css/scss/assets/_cardsGlosario.scss
+++ b/css/scss/assets/_cardsGlosario.scss
@@ -1,6 +1,7 @@
 .swiper-container-father{
     width: 100%;
-    height: 75vh;
+    height: 80vh;
+    padding-top: 64px;
 
     display: flex;
     justify-content: center;
@@ -137,6 +138,10 @@
     }
 }
 
+.hiddenCard{
+    display: none !important;
+}
+
 //Nuevo codigo para los colores
 @function generate-pastel-color($index) {
     $base-hue: 165deg; // Puedes ajustar el tono base según tu preferencia
@@ -206,3 +211,26 @@
 // .swiper-slide:nth-child(10n) {
 //     background-color: rgb(54, 94, 77);
 // }
+
+
+/////////////////////
+/// Estilos para el selector de tarjetas por unidad
+
+.inputSelectUnitConcepts{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    padding-right: 40px;
+
+    .select-wrapper{
+        width: 250px;
+    }
+
+    .select-dropdown{
+        padding: 0 10px !important;
+        border-radius: 10px !important;
+        color: #000;
+        font-weight: 600;
+        background-color: rgba(255, 255, 255, 1) !important;
+    }
+}
