--- a/css/colors/unidad5/estilo_oscuro.css
+++ b/css/colors/unidad5/estilo_oscuro.css
@@ -29,10 +29,14 @@
 }
 
 .activeLinkOptionsContentUnit5 {
-    background-color: #737b96;
-    border-left: #363a47 20px solid !important;
-    color: #fff;
+    background-color: #5b6175;
+    border-left: #2c2f3a 20px solid !important;
     font-weight: 600;
+    color: #fff !important;
+}
+
+.activeLinkOptionsContentUnit5 > p, .activeLinkOptionsContentUnit5 > i{
+    color: #fff !important;
 }
 
 .leftBorderOnUnit5 {
@@ -201,3 +205,30 @@
 .input-field textarea.valid:focus ~ .helper-text::after {
     color: #78819e;
 }
+
+/* Estilos el nav (barra inferior) y para el menu de contenidos cuando se le hace click */
+li.indicator {
+    height: 4px !important;
+    background-color: #565d72 !important;
+}
+
+.collapsible-header-clicked{
+    background-color: #565d72 !important;
+    color: #dfdfdf !important;
+    font-weight: 600;
+}
+
+/*Estilos para el color del titulo de las cards de contenido*/
+.colorCardTitleContent{
+    background-color: #78819e !important;
+}
+
+/*Para el elemento de blockquote*/
+blockquote {
+    margin: 0 0 20px 0 !important;
+    border-left: 5px solid #78819e;
+    font-weight: 500 !important;
+    border-radius: 0 10px 10px 0;
+    padding: 20px;
+}
+
