--- a/css/scss/assets/_collapsible.scss
+++ b/css/scss/assets/_collapsible.scss
@@ -27,10 +27,11 @@
         background-color: rgb(204, 204, 204);
     }
 
-    .collapsible-header-clicked{
-        background-color: #be7f94 !important;
-        font-weight: 600;
-    }
+    ///Esto se movio a la carpeta de archivos de colores por unidad
+    // .collapsible-header-clicked{
+    //     background-color: #be7f94 !important;
+    //     font-weight: 600;
+    // }
 
     .collapsible-body{
         padding: 0 !important;
