--- a/css/scss/assets/_navCustomized.scss
+++ b/css/scss/assets/_navCustomized.scss
@@ -117,7 +117,8 @@
   }
 }
 
-li.indicator {
-  height: 4px !important;
-  background-color: #ac5c79 !important;
-}
+///Indicador fue movido a los archivos de colores por unidad
+// li.indicator {
+//   height: 4px !important;
+//   background-color: #ac5c79 !important;
+// }
