--- a/css/scss/assets/_textCustomized.scss
+++ b/css/scss/assets/_textCustomized.scss
@@ -168,7 +168,7 @@
   font-weight: 800;
   font-size: 1.3rem;
   background-color: #ffffff;
-  color: #794453;
+  color: #547264;
   height: auto;
   display: inline;
 }
@@ -188,7 +188,7 @@
   font-weight: 800;
   font-size: 1.3rem;
   background-color: #ffffff;
-  color: #4d394d;
+  color: #755675;
   height: auto;
   display: inline;
 }
@@ -198,7 +198,7 @@
   font-weight: 800;
   font-size: 1.3rem;
   background-color: #ffffff;
-  color: #53302c;
+  color: #7a4741;
   height: auto;
   display: inline;
 }
@@ -208,7 +208,7 @@
   font-weight: 800;
   font-size: 1.3rem;
   background-color: #ffffff;
-  color: #697088;
+  color: #5a6074;
   height: auto;
   display: inline;
 }
@@ -246,10 +246,11 @@
   }
 }
 
-blockquote{
-  margin: 0 0 20px 0 !important;
-  border-left: 5px solid #d894ab;
-  font-weight: 500 !important;
-  border-radius: 0 10px 10px 0;
-  padding: 20px;
-}
+//Se paso a las hojas de estilos personalizadas por unidad
+// blockquote{
+//   margin: 0 0 20px 0 !important;
+//   border-left: 5px solid #d894ab;
+//   font-weight: 500 !important;
+//   border-radius: 0 10px 10px 0;
+//   padding: 20px;
+// }
