--- a/css/colors/unidad1/estilo_claro.css
+++ b/css/colors/unidad1/estilo_claro.css
@@ -27,10 +27,14 @@
 }
 
 .activeLinkOptionsContentUnit1 {
-    background-color: #607c6f;
-    border-left: #4a6156 20px solid !important;
-    color: #fff;
+    background-color: #485f55;
+    border-left: #35463d 20px solid !important;
     font-weight: 600;
+    color: #fff !important;
+}
+
+.activeLinkOptionsContentUnit1 > p, .activeLinkOptionsContentUnit1 > i{
+    color: #fff !important;
 }
 
 .leftBorderOnUnit1 {
@@ -63,7 +67,10 @@
     background-color: #e9e9e9;
     border-radius: 5px;
     transition: all 0.1s ease-in-out;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    box-shadow:
+        0 2px 2px 0 rgba(0, 0, 0, 0.14),
+        0 3px 1px -2px rgba(0, 0, 0, 0.2),
+        0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 .lateralMenuAdjustTextTitle {
@@ -191,4 +198,30 @@
 .input-field textarea.valid ~ .helper-text::after,
 .input-field textarea.valid:focus ~ .helper-text::after {
     color: #698b7b;
+}
+
+/* Estilos el nav (barra inferior) y para el menu de contenidos cuando se le hace click */
+li.indicator {
+    height: 4px !important;
+    background-color: #3c4e46 !important;
+}
+
+.collapsible-header-clicked {
+    background-color: #3c4e46 !important;
+    color: #dfdfdf !important;
+    font-weight: 600;
+}
+
+/*Estilos para el color del titulo de las cards de contenido*/
+.colorCardTitleContent {
+    background-color: #557063 !important;
+}
+
+/*Para el elemento de blockquote*/
+blockquote {
+    margin: 0 0 20px 0 !important;
+    border-left: 5px solid #557063;
+    font-weight: 500 !important;
+    border-radius: 0 10px 10px 0;
+    padding: 20px;
 }
