--- a/css/colors/unidad4/estilo_oscuro.css
+++ b/css/colors/unidad4/estilo_oscuro.css
@@ -29,10 +29,14 @@
 }
 
 .activeLinkOptionsContentUnit4 {
-    background-color: #ac645c;
-    border-left: #7e4a44 20px solid !important;
-    color: #fff;
+    background-color: #854f49;
+    border-left: #5c3430 20px solid !important;
     font-weight: 600;
+    color: #fff !important;
+}
+
+.activeLinkOptionsContentUnit4 > p, .activeLinkOptionsContentUnit4 > i{
+    color: #fff !important;
 }
 
 .leftBorderOnUnit4 {
@@ -200,4 +204,30 @@
 .input-field textarea.valid ~ .helper-text::after,
 .input-field textarea.valid:focus ~ .helper-text::after {
     color: #d67c72;
+}
+
+/* Estilos el nav (barra inferior) y para el menu de contenidos cuando se le hace click */
+li.indicator {
+    height: 4px !important;
+    background-color: #7c4640 !important;
+}
+
+.collapsible-header-clicked{
+    background-color: #7c4640 !important;
+    color: #dfdfdf !important;
+    font-weight: 600;
+}
+
+/*Estilos para el color del titulo de las cards de contenido*/
+.colorCardTitleContent{
+    background-color: #ac655d !important;
+}
+
+/*Para el elemento de blockquote*/
+blockquote {
+    margin: 0 0 20px 0 !important;
+    border-left: 5px solid #ac655d;
+    font-weight: 500 !important;
+    border-radius: 0 10px 10px 0;
+    padding: 20px;
 }
