Nueva version del lector de libros con imagenes

--- a/css/scss/styles.scss
+++ b/css/scss/styles.scss
@@ -26,6 +26,7 @@
 @use "assets/_imageZoomed.scss";
 @use "assets/_linkToResource.scss";
 @use "assets/_cardsGlosario.scss";
+@use "assets/_lectorLibros.scss";
 
 
 //Pages
