--- a/css/colors/unidad1/estilo_claro.css
+++ b/css/colors/unidad1/estilo_claro.css
@@ -217,6 +217,15 @@ li.indicator {
     background-color: #557063 !important;
 }
 
+/*Estilos del boton de ayuda*/
+.colorButtonHelpUnit {
+    background-color: #557063 !important;
+    
+    &:hover{
+        background-color: #3a4d44 !important;
+    }
+}
+
 /*Para el elemento de blockquote*/
 blockquote {
     margin: 0 0 20px 0 !important;
