Color de subrayado de keywords ajustado

--- a/css/scss/assets/configAssets/_textAdjust.scss
+++ b/css/scss/assets/configAssets/_textAdjust.scss
@@ -136,8 +136,8 @@ i{
 
 .textWordHelp {
   font-weight: 610;
-  background-color: #f1c2d3;
-  color: #5c454b;
+  background-color: #a7ccba;
+  color: #32443c;
   border-radius: 3px;
   padding: 0px 8px;
 }
