--- a/css/colors/unidad2/estilo_oscuro.css
+++ b/css/colors/unidad2/estilo_oscuro.css
@@ -1,6 +1,6 @@
 /*Colores de unidad 2*/
 .navUnit2 {
-    background-color: #805458;
+    background-color: #A15961;
 }
 
 .nav-superiorUnit2 {
@@ -8,29 +8,29 @@
 }
 
 .footerDesignUnit2 {
-    border-bottom: #a0686e 30px solid !important;
+    border-bottom: #F2B8BF 30px solid !important;
 }
 
 .leftBorderUnit2 {
-    border-left: #724b4f 10px solid !important;
+    border-left: #C27A83 10px solid !important;
     transition: all .2s ease;
     font-weight: 600;
 }
 
 .leftBorderSecondaryUnit2 {
-    border-left: #b87c82 10px solid !important;
+    border-left: #A15961 10px solid !important;
     transition: all .2s ease;
 }
 
 .leftBorderUnit2:hover,
 .leftBorderSecondaryUnit2:hover {
     background-color: #272c31;
-    border-left: #583b3e 20px solid !important;
+    border-left: #8F4E55 20px solid !important;
 }
 
 .activeLinkOptionsContentUnit2 {
-    background-color: #754e52;
-    border-left: #442d2f 20px solid !important;
+    background-color: #A15961;
+    border-left: #8F4E55 20px solid !important;
     font-weight: 600;
     color: #fff !important;
 }
@@ -40,7 +40,7 @@
 }
 
 .leftBorderOnUnit2 {
-    border-left: #724b4f 10px solid !important;
+    border-left: #F7D0D5 10px solid !important;
     background-color: rgb(209, 209, 209);
     font-weight: 700;
     transition: all .1s ease;
@@ -51,9 +51,9 @@
 	--hue: 223;
 	--bg: hsl(var(--hue),10%,90%);
 	--fg: hsl(var(--hue),10%,10%);
-	--primary: #5f3f42;
-	--primary-l: #b87c82;
-	--primary-d: #b87c82;
+	--primary: #E99DA5;
+	--primary-l: #F2B8BF;
+	--primary-d: #F7D0D5;
 	--white: hsl(var(--hue),10%,100%);
 	--white-d: hsl(var(--hue),10%,45%);
 }
@@ -61,12 +61,12 @@
 
 /*Menu lateral de textos*/
 .leftBorderUnit2Menu{
-    border-bottom: #5f3f42 70px solid !important;
+    border-bottom: #E99DA5 70px solid !important;
     overflow-x: hidden;
 }
 
 .activeButtonTextLateral{
-    border-left: 10px #b87c82 solid;
+    border-left: 10px #F7D0D5 solid;
     background-color: #272c31;
     border-radius: 5px;
     transition: all .1s ease-in-out;
@@ -76,7 +76,7 @@
 }
 
 .lateralMenuAdjustTextTitle{
-    background-color: #5f3f42;
+    background-color: #E99DA5;
     position: relative;
     top: -10px;
     left: -10px;
@@ -134,18 +134,18 @@
 
 .activeLinkOptionsContentUnit2Mobile{
     background-color: #1c1f22;
-    border-left: #724b4f 10px solid !important;
+    border-left: #F7D0D5 10px solid !important;
     color: #cecece;
     font-weight: 600;
 }
 
 #barraPreguntas,
 #barraPreguntas2 {
-    background: rgb(160,104,110);
-    background: -moz-linear-gradient(90deg, rgba(160,104,110,1) 17%, rgba(128,84,88,1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(160,104,110,1) 17%, rgba(128,84,88,1) 100%);
-    background: linear-gradient(90deg, rgba(160,104,110,1) 17%, rgba(128,84,88,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#a0686e",endColorstr="#805458",GradientType=1); 
+    background: rgb(247, 208, 213);
+    background: -moz-linear-gradient(90deg, rgba(247, 208, 213, 1) 17%, rgba(233, 157, 165, 1) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(247, 208, 213, 1) 17%, rgba(233, 157, 165, 1) 100%);
+    background: linear-gradient(90deg, rgba(247, 208, 213, 1) 17%, rgba(233, 157, 165, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#F7D0D5",endColorstr="#E99DA5",GradientType=1); 
     height: 20px;
     border-radius: 5px;
     width: 0px;
@@ -158,14 +158,14 @@
 .input-field input[type]:focus:not([readonly]),
 .input-field textarea:not([readonly]),
 .input-field textarea:focus:not([readonly]) {
-    border-bottom: 1px solid #a0686e;
-    box-shadow: 0 1px 0 0 #a0686e;
+    border-bottom: 1px solid #F2B8BF;
+    box-shadow: 0 1px 0 0 #F2B8BF;
 }
 
 /* Inactive/Active Default input label color */
 .input-field input[type]:focus:not([readonly]) + label,
 .input-field textarea:focus:not([readonly]) + label {
-    color: #a0686e;
+    color: #F2B8BF;
 }
 
 /* Active/Inactive Invalid input field colors */
@@ -173,8 +173,8 @@
 .input-field input[type].invalid:focus,
 .input-field textarea.invalid,
 .input-field textarea.invalid:focus {
-    border-bottom: 1px solid #a0686e;
-    box-shadow: 0 1px 0 0 #a0686e;
+    border-bottom: 1px solid #F2B8BF;
+    box-shadow: 0 1px 0 0 #F2B8BF;
 }
 
 /* Active/Inactive Invalid input label color */
@@ -184,7 +184,7 @@
 .input-field textarea.invalid:focus + label,
 .input-field textarea.invalid ~ .helper-text::after,
 .input-field textarea.invalid:focus ~ .helper-text::after {
-    color: #a0686e;
+    color: #F2B8BF;
 }
 
 /* Active/Inactive Valid input field color */
@@ -192,8 +192,8 @@
 .input-field input[type].valid:focus,
 .input-field textarea.valid,
 .input-field textarea.valid:focus {
-    border-bottom: 1px solid #a0686e;
-    box-shadow: 0 1px 0 0 #a0686e;
+    border-bottom: 1px solid #F2B8BF;
+    box-shadow: 0 1px 0 0 #F2B8BF;
 }
 
 /* Active/Inactive Valid input label color */
@@ -203,39 +203,39 @@
 .input-field textarea.valid:focus + label,
 .input-field textarea.valid ~ .helper-text::after,
 .input-field textarea.valid:focus ~ .helper-text::after {
-    color: #a0686e;
+    color: #F2B8BF;
 }
 
 /* Estilos el nav (barra inferior) y para el menu de contenidos cuando se le hace click */
 li.indicator {
     height: 4px !important;
-    background-color: #664346 !important;
+    background-color: #D27883 !important;
 }
 
 .collapsible-header-clicked{
-    background-color: #664346 !important;
+    background-color: #D27883 !important;
     color: #dfdfdf !important;
     font-weight: 600;
 }
 
 /*Estilos para el color del titulo de las cards de contenido*/
 .colorCardTitleContent{
-    background-color: #805458 !important;
+    background-color: #A15961 !important;
 }
 
 /*Estilos del boton de ayuda*/
 .colorButtonHelpUnit {
-    background-color: #805458 !important;
+    background-color: #A15961 !important;
     
     &:hover{
-        background-color: #57393b !important;
+        background-color: #8F4E55 !important;
     }
 }
 
 /*Para el elemento de blockquote*/
 blockquote {
     margin: 0 0 20px 0 !important;
-    border-left: 5px solid #805458;
+    border-left: 5px solid #E99DA5;
     font-weight: 500 !important;
     border-radius: 0 10px 10px 0;
     padding: 20px;
