--- a/css/scss/pages/_analitica.scss
+++ b/css/scss/pages/_analitica.scss
@@ -1,42 +1,42 @@
 //Colores
 .barraGraficaStats1 {
-    background: rgb(124, 177, 152);
-    background: -moz-linear-gradient(90deg, rgba(124, 177, 152, 1) 17%, rgba(85, 112, 99, 1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(124, 177, 152, 1) 17%, rgba(85, 112, 99, 1) 100%);
-    background: linear-gradient(90deg, rgba(124, 177, 152, 1) 17%, rgba(85, 112, 99, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#7cb198",endColorstr="#557063",GradientType=1);
+    background: rgb(156, 209, 184);
+    background: -moz-linear-gradient(90deg, rgba(156, 209, 184, 1) 17%, rgba(107, 160, 141, 1) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(156, 209, 184, 1) 17%, rgba(107, 160, 141, 1) 100%);
+    background: linear-gradient(90deg, rgba(156, 209, 184, 1) 17%, rgba(107, 160, 141, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9cd1b8",endColorstr="#6ba08d",GradientType=1);
 }
 
 .barraGraficaStats2 {
-    background: rgb(160, 104, 110);
-    background: -moz-linear-gradient(90deg, rgba(160, 104, 110, 1) 17%, rgba(128, 84, 88, 1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(160, 104, 110, 1) 17%, rgba(128, 84, 88, 1) 100%);
-    background: linear-gradient(90deg, rgba(160, 104, 110, 1) 17%, rgba(128, 84, 88, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#a0686e",endColorstr="#805458",GradientType=1);
+    background: rgb(233, 157, 165);
+    background: -moz-linear-gradient(90deg, rgba(233, 157, 165, 1) 17%, rgba(215, 122, 134, 1) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(233, 157, 165, 1) 17%, rgba(215, 122, 134, 1) 100%);
+    background: linear-gradient(90deg, rgba(233, 157, 165, 1) 17%, rgba(215, 122, 134, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e99da5",endColorstr="#d77a86",GradientType=1);
 }
 
 .barraGraficaStats3 {
-    background: rgb(153, 109, 153);
-    background: -moz-linear-gradient(90deg, rgba(153, 109, 153, 1) 17%, rgba(116, 84, 116, 1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(153, 109, 153, 1) 17%, rgba(116, 84, 116, 1) 100%);
-    background: linear-gradient(90deg, rgba(153, 109, 153, 1) 17%, rgba(116, 84, 116, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#996d99",endColorstr="#745474",GradientType=1);
+    background: rgb(177, 156, 217);
+    background: -moz-linear-gradient(90deg, rgba(177, 156, 217, 1) 17%, rgba(154, 131, 201, 1) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(177, 156, 217, 1) 17%, rgba(154, 131, 201, 1) 100%);
+    background: linear-gradient(90deg, rgba(177, 156, 217, 1) 17%, rgba(154, 131, 201, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#b19cd9",endColorstr="#9a83c9",GradientType=1);
 }
 
 .barraGraficaStats4 {
-    background: rgb(214, 124, 114);
-    background: -moz-linear-gradient(90deg, rgba(214, 124, 114, 1) 17%, rgba(172, 101, 93, 1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(214, 124, 114, 1) 17%, rgba(172, 101, 93, 1) 100%);
-    background: linear-gradient(90deg, rgba(214, 124, 114, 1) 17%, rgba(172, 101, 93, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d67c72",endColorstr="#ac655d",GradientType=1);
+    background: rgb(240, 163, 153);
+    background: -moz-linear-gradient(90deg, rgba(240, 163, 153, 1) 17%, rgba(215, 122, 112, 1) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(240, 163, 153, 1) 17%, rgba(215, 122, 112, 1) 100%);
+    background: linear-gradient(90deg, rgba(240, 163, 153, 1) 17%, rgba(215, 122, 112, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f0a399",endColorstr="#d77a70",GradientType=1);
 }
 
 .barraGraficaStats5 {
-    background: rgb(146, 166, 233);
-    background: -moz-linear-gradient(90deg, rgba(146, 166, 233, 1) 17%, rgba(126, 136, 168, 1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(146, 166, 233, 1) 17%, rgba(126, 136, 168, 1) 100%);
-    background: linear-gradient(90deg, rgba(146, 166, 233, 1) 17%, rgba(126, 136, 168, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#92a6e9",endColorstr="#7e88a8",GradientType=1);
+    background: rgb(167, 180, 219);
+    background: -moz-linear-gradient(90deg, rgba(167, 180, 219, 1) 17%, rgba(136, 150, 199, 1) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(167, 180, 219, 1) 17%, rgba(136, 150, 199, 1) 100%);
+    background: linear-gradient(90deg, rgba(167, 180, 219, 1) 17%, rgba(136, 150, 199, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#a7b4db",endColorstr="#8896c7",GradientType=1);
 }
 
 //Contenedor padre de la grafica y datos generales
