--- a/css/colors/standarDark.css
+++ b/css/colors/standarDark.css
@@ -1,53 +1,53 @@
 /*Color del body*/
 body {
-    background-color: #272c31;
+    background-color: #1A1F2C;
 }
 
 /*Base palette*/
 .cl1 {
-    background-color: #272c31;
+    background-color: #2A3655; /* Azul oscuro */
 }
 
 .cl2 {
-    background-color: #2e343a;
+    background-color: #324066; /* Azul oscuro medio */
 }
 
 .cl3 {
-    background-color: #3b424b;
+    background-color: #3A4B77; /* Azul oscuro medio claro */
 }
 
 .cl4 {
-    background-color: #444c57;
+    background-color: #435688; /* Azul medio */
 }
 
 .cl5 {
-    background-color: #4c5663;
+    background-color: #4C6199; /* Azul medio claro */
 }
 
 .cl6 {
-    background-color: #596675;
+    background-color: #566CAA; /* Azul claro */
 }
 
 /*White element*/
 .clw {
-    background-color: #3b424b;
+    background-color: #1E2433;
 }
 
 /*Grey element*/
 .clgreyl1 {
-    background-color: #272c31;
+    background-color: #232838;
 }
 
 .clgreyl2 {
-    background-color: #2e343a;
+    background-color: #2A3144;
 }
 
 .clgreyl3 {
-    background-color: #3b424b;
+    background-color: #313950;
 }
 
 .clgreyl4 {
-    background-color: #444c57;
+    background-color: #38425C;
 }
 
 .clgreyl4 {
@@ -90,19 +90,19 @@ body {
     font-weight: 600;
     color: #ffffff;
     padding-left: 15px;
-    border-left: 6px solid #c9c9c9;
+    border-left: 6px solid #78B1C4;
 }
 
 .table-of-contents a.active {
     font-weight: 600;
     padding-left: 14px;
     color: #ffffff;
-    border-left: 10px solid #ffffff;
+    border-left: 10px solid #67A2B6;
 }
 
 /*Colores de inputs*/
 input[type=range]+.thumb {
-    background-color: #4a5f77 !important;
+    background-color: #78B1C4 !important;
 }
 
 input[type=range]+.thumb.active .value {
@@ -123,7 +123,7 @@ input[type=range]::-moz-range-track {
 input[type=range]::-moz-range-thumb {
     height: 20px;
     width: 20px;
-    background: #4a5f77;
+    background: #78B1C4;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
         0 3px 1px -2px rgba(0, 0, 0, 0.2),
         0 1px 5px 0 rgba(0, 0, 0, 0.12);
@@ -138,7 +138,7 @@ input[type=range]::-webkit-slider-runnable-track {
 input[type=range]::-webkit-slider-thumb {
     height: 20px;
     width: 20px;
-    background: #4a5f77;
+    background: #78B1C4;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
         0 3px 1px -2px rgba(0, 0, 0, 0.2),
         0 1px 5px 0 rgba(0, 0, 0, 0.12);
@@ -147,18 +147,18 @@ input[type=range]::-webkit-slider-thumb {
 [type="radio"]:checked+span:after,
 [type="radio"].with-gap:checked+span:before,
 [type="radio"].with-gap:checked+span:after {
-    border: 2px solid #b2d3f8;
+    border: 2px solid #9ACFE0;
 }
 
 [type="radio"]:checked+span:after,
 [type="radio"].with-gap:checked+span:after {
-    background-color: #b2d3f8;
+    background-color: #9ACFE0;
 }
 
 .btn:hover,
 .btn-large:hover,
 .btn-small:hover {
-    background-color: #4a5f77 !important;
+    background-color: #78B1C4 !important;
     color: #fff !important;
 }
 
@@ -166,7 +166,7 @@ input[type=range]::-webkit-slider-thumb {
 .btn-large:focus,
 .btn-small:focus,
 .btn-floating:focus {
-    background-color: #4a5f77 !important;
+    background-color: #78B1C4 !important;
     color: #fff !important;
 }
 
@@ -182,13 +182,13 @@ input[type="range"] {
 
 /*Configuraciones de textos*/
 .activeButtonText {
-    background-color: #697888 !important;
-    color: #e4e4e4 !important;
+    background-color: #67A2B6 !important;
+    color: #ffffff !important;
 }
 
 /*Menu lateral de textos*/
 .leftBorderMenuPrincipal {
-    border-bottom: #536a85 70px solid !important;
+    border-bottom: #78B1C4 70px solid !important;
     overflow-x: hidden;
 }
 
@@ -197,7 +197,7 @@ input[type="range"] {
 }
 
 .activeButtonTextLateralPrincipal {
-    border-left: 10px #536a85 solid;
+    border-left: 10px #78B1C4 solid;
     background-color: #444c57;
     border-radius: 5px;
     transition: all .1s ease-in-out;
@@ -207,7 +207,7 @@ input[type="range"] {
 }
 
 .lateralMenuAdjustTextTitlePrincipal {
-    background-color: #536a85;
+    background-color: #78B1C4;
     position: relative;
     top: 0px;
     left: 0;
