--- a/css/colors/unidad1/estilo_oscuro.css
+++ b/css/colors/unidad1/estilo_oscuro.css
@@ -1,6 +1,6 @@
 /*Colores de unidad 1*/
 .navUnit1 {
-    background-color: #557063;
+    background-color: #45705C;
 }
 
 .nav-superiorUnit1 {
@@ -8,27 +8,27 @@
 }
 
 .leftBorderUnit1 {
-    border-left: #7aa38f 10px solid !important;
+    border-left: #5B8D74 10px solid !important;
     transition: all .2s ease;
     font-weight: 600;
-    color: #3d3d3d;
+    color: #ffffff;
 }
 
 .leftBorderSecondaryUnit1 {
-    border-left: #9BCFB6 10px solid !important;
+    border-left: #45705C 10px solid !important;
     transition: all .2s ease;
-    color: #3d3d3d;
+    color: #ffffff;
 }
 
 .leftBorderUnit1:hover,
 .leftBorderSecondaryUnit1:hover {
     background-color: #272c31;
-    border-left: #5c796b 20px solid !important;
+    border-left: #45705C 20px solid !important;
 }
 
 .activeLinkOptionsContentUnit1 {
-    background-color: #485f55;
-    border-left: #35463d 20px solid !important;
+    background-color: #45705C;
+    border-left: #35574A 20px solid !important;
     font-weight: 600;
     color: #fff !important;
 }
@@ -38,7 +38,7 @@
 }
 
 .leftBorderOnUnit1 {
-    border-left: #5c796b 10px solid !important;
+    border-left: #6FAA8C 10px solid !important;
     background-color: rgb(209, 209, 209);
     font-weight: 700;
     transition: all .1s ease;
@@ -49,9 +49,9 @@
 	--hue: 223;
 	--bg: hsl(var(--hue),10%,90%);
 	--fg: hsl(var(--hue),10%,10%);
-	--primary: #5c796b;
-	--primary-l: #607c6f;
-	--primary-d: #7ca08f;
+	--primary: #8BC3A9;
+	--primary-l: #A8D7BF;
+	--primary-d: #C5E6D5;
 	--white: hsl(var(--hue),10%,100%);
 	--white-d: hsl(var(--hue),10%,45%);
 }
@@ -59,12 +59,12 @@
 
 /*Menu lateral de textos*/
 .leftBorderUnit1Menu{
-    border-bottom: #5c796b 70px solid !important;
+    border-bottom: #8BC3A9 70px solid !important;
     overflow-x: hidden;
 }
 
 .activeButtonTextLateral{
-    border-left: 10px #7aa38f solid;
+    border-left: 10px #C5E6D5 solid;
     background-color: #272c31;
     border-radius: 5px;
     transition: all .1s ease-in-out;
@@ -74,7 +74,7 @@
 }
 
 .lateralMenuAdjustTextTitle{
-    background-color: #5c796b;
+    background-color: #8BC3A9;
     position: relative;
     top: -10px;
     left: -10px;
@@ -132,18 +132,18 @@
 
 .activeLinkOptionsContentUnit1Mobile{
     background-color: #1c1f22;
-    border-left: #7aa38f 10px solid !important;
+    border-left: #C5E6D5 10px solid !important;
     color: #cecece;
     font-weight: 600;
 }
 
 #barraPreguntas,
 #barraPreguntas2 {
-    background: rgb(124,177,152);
-    background: -moz-linear-gradient(90deg, rgba(124,177,152,1) 17%, rgba(85,112,99,1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(124,177,152,1) 17%, rgba(85,112,99,1) 100%);
-    background: linear-gradient(90deg, rgba(124,177,152,1) 17%, rgba(85,112,99,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#7cb198",endColorstr="#557063",GradientType=1); 
+    background: rgb(197, 230, 213);
+    background: -moz-linear-gradient(90deg, rgba(197, 230, 213, 1) 17%, rgba(139, 195, 169, 1) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(197, 230, 213, 1) 17%, rgba(139, 195, 169, 1) 100%);
+    background: linear-gradient(90deg, rgba(197, 230, 213, 1) 17%, rgba(139, 195, 169, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#C5E6D5",endColorstr="#8BC3A9",GradientType=1); 
     height: 20px;
     border-radius: 5px;
     width: 0px;
@@ -157,14 +157,14 @@
 .input-field input[type]:focus:not([readonly]),
 .input-field textarea:not([readonly]),
 .input-field textarea:focus:not([readonly]) {
-    border-bottom: 1px solid #698b7b;
-    box-shadow: 0 1px 0 0 #698b7b;
+    border-bottom: 1px solid #A8D7BF;
+    box-shadow: 0 1px 0 0 #A8D7BF;
 }
 
 /* Inactive/Active Default input label color */
 .input-field input[type]:focus:not([readonly]) + label,
 .input-field textarea:focus:not([readonly]) + label {
-    color: #698b7b;
+    color: #A8D7BF;
 }
 
 /* Active/Inactive Invalid input field colors */
@@ -172,8 +172,8 @@
 .input-field input[type].invalid:focus,
 .input-field textarea.invalid,
 .input-field textarea.invalid:focus {
-    border-bottom: 1px solid #698b7b;
-    box-shadow: 0 1px 0 0 #698b7b;
+    border-bottom: 1px solid #A8D7BF;
+    box-shadow: 0 1px 0 0 #A8D7BF;
 }
 
 /* Active/Inactive Invalid input label color */
@@ -183,7 +183,7 @@
 .input-field textarea.invalid:focus + label,
 .input-field textarea.invalid ~ .helper-text::after,
 .input-field textarea.invalid:focus ~ .helper-text::after {
-    color: #698b7b;
+    color: #A8D7BF;
 }
 
 /* Active/Inactive Valid input field color */
@@ -191,8 +191,8 @@
 .input-field input[type].valid:focus,
 .input-field textarea.valid,
 .input-field textarea.valid:focus {
-    border-bottom: 1px solid #698b7b;
-    box-shadow: 0 1px 0 0 #698b7b;
+    border-bottom: 1px solid #A8D7BF;
+    box-shadow: 0 1px 0 0 #A8D7BF;
 }
 
 /* Active/Inactive Valid input label color */
@@ -202,32 +202,32 @@
 .input-field textarea.valid:focus + label,
 .input-field textarea.valid ~ .helper-text::after,
 .input-field textarea.valid:focus ~ .helper-text::after {
-    color: #698b7b;
+    color: #A8D7BF;
 }
 
 /* Estilos el nav (barra inferior) y para el menu de contenidos cuando se le hace click */
 li.indicator {
     height: 4px !important;
-    background-color: #3c4e46 !important;
+    background-color: #57947A !important;
 }
 
 .collapsible-header-clicked{
-    background-color: #3c4e46 !important;
+    background-color: #57947A !important;
     color: #dfdfdf !important;
     font-weight: 600;
 }
 
 /*Estilos para el color del titulo de las cards de contenido*/
 .colorCardTitleContent{
-    background-color: #557063 !important;
+    background-color: #45705C !important;
 }
 
 /*Estilos del boton de ayuda*/
 .colorButtonHelpUnit {
-    background-color: #557063 !important;
+    background-color: #45705C !important;
     
     &:hover{
-        background-color: #3a4d44 !important;
+        background-color: #35574A !important;
     }
 }
 
@@ -235,7 +235,7 @@ li.indicator {
 /*Para el elemento de blockquote*/
 blockquote {
     margin: 0 0 20px 0 !important;
-    border-left: 5px solid #557063;
+    border-left: 5px solid #8BC3A9;
     font-weight: 500 !important;
     border-radius: 0 10px 10px 0;
     padding: 20px;
