--- a/css/colors/unidad3/estilo_claro.css
+++ b/css/colors/unidad3/estilo_claro.css
@@ -1,36 +1,35 @@
 /*Colores de unidad 3*/
 .navUnit3{
-    background-color:#996D99;
+    background-color: #8B77B5;
 }
 
 .nav-superiorUnit3{
-    background-color: #745474 !important;
+    background-color: #9D89C7 !important;
 }
 
 .footerDesignUnit3{
-    border-bottom: #745474 30px solid !important;
+    border-bottom: #C9B8E5 30px solid !important;
 }
 
 .leftBorderUnit3{
-    border-left: #745474 10px solid !important;
+    border-left: #B19CD9 10px solid !important;
     transition: all .2s ease;
     font-weight: 600;
 }
 
-
 .leftBorderSecondaryUnit3{
-    border-left: #9b719b 10px solid !important;
+    border-left: #C9B8E5 10px solid !important;
     transition: all .2s ease;
 }
 
 .leftBorderUnit3:hover, .leftBorderSecondaryUnit3:hover{
     background-color: rgb(202, 202, 202);
-    border-left: #4d394d 20px solid !important;
+    border-left: #7A66A3 20px solid !important;
 }
 
 .activeLinkOptionsContentUnit3 {
-    background-color: #6e4e6e;
-    border-left: #422f42 20px solid !important;
+    background-color: #8B77B5;
+    border-left: #6A5693 20px solid !important;
     font-weight: 600;
     color: #fff !important;
 }
@@ -40,7 +39,7 @@
 }
 
 .leftBorderOnUnit3{
-    border-left: #745474 10px solid !important;
+    border-left: #D6C8ED 10px solid !important;
     background-color: rgb(209, 209, 209);
     font-weight: 700;
     transition: all .1s ease;
@@ -51,9 +50,9 @@
 	--hue: 223;
 	--bg: hsl(var(--hue),10%,90%);
 	--fg: hsl(var(--hue),10%,10%);
-	--primary: #4d394d;
-	--primary-l: #886388;
-	--primary-d: #886388;
+	--primary: #B19CD9;
+	--primary-l: #C9B8E5;
+	--primary-d: #D6C8ED;
 	--white: hsl(var(--hue),10%,100%);
 	--white-d: hsl(var(--hue),10%,45%);
 }
@@ -61,12 +60,12 @@
 
 /*Menu lateral de textos*/
 .leftBorderUnit3Menu{
-    border-bottom: #745474 70px solid !important;
+    border-bottom: #B19CD9 70px solid !important;
     overflow-x: hidden;
 }
 
 .activeButtonTextLateral{
-    border-left: 10px #9b719b solid;
+    border-left: 10px #D6C8ED solid;
     background-color: #e9e9e9;
     border-radius: 5px;
     transition: all .1s ease-in-out;
@@ -76,7 +75,7 @@
 }
 
 .lateralMenuAdjustTextTitle{
-    background-color: #745474;
+    background-color: #B19CD9;
     position: relative;
     top: -10px;
     left: -10px;
@@ -135,18 +134,18 @@
 
 .activeLinkOptionsContentUnit3Mobile{
     background-color: #dfdfdf;
-    border-left: #745474 10px solid !important;
+    border-left: #D6C8ED 10px solid !important;
     color: #292929;
     font-weight: 600;
 }
 
 #barraPreguntas,
 #barraPreguntas2 {
-    background: rgb(153,109,153);
-    background: -moz-linear-gradient(90deg, rgba(153,109,153,1) 17%, rgba(116,84,116,1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(153,109,153,1) 17%, rgba(116,84,116,1) 100%);
-    background: linear-gradient(90deg, rgba(153,109,153,1) 17%, rgba(116,84,116,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#996d99",endColorstr="#745474",GradientType=1); 
+    background: rgb(214, 200, 237);
+    background: -moz-linear-gradient(90deg, rgba(214, 200, 237, 1) 17%, rgba(177, 156, 217, 1) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(214, 200, 237, 1) 17%, rgba(177, 156, 217, 1) 100%);
+    background: linear-gradient(90deg, rgba(214, 200, 237, 1) 17%, rgba(177, 156, 217, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#D6C8ED",endColorstr="#B19CD9",GradientType=1); 
     height: 20px;
     border-radius: 5px;
     width: 0px;
@@ -159,14 +158,14 @@
 .input-field input[type]:focus:not([readonly]),
 .input-field textarea:not([readonly]),
 .input-field textarea:focus:not([readonly]) {
-    border-bottom: 1px solid #745474;
-    box-shadow: 0 1px 0 0 #745474;
+    border-bottom: 1px solid #C9B8E5;
+    box-shadow: 0 1px 0 0 #C9B8E5;
 }
 
 /* Inactive/Active Default input label color */
 .input-field input[type]:focus:not([readonly]) + label,
 .input-field textarea:focus:not([readonly]) + label {
-    color: #745474;
+    color: #C9B8E5;
 }
 
 /* Active/Inactive Invalid input field colors */
@@ -174,8 +173,8 @@
 .input-field input[type].invalid:focus,
 .input-field textarea.invalid,
 .input-field textarea.invalid:focus {
-    border-bottom: 1px solid #745474;
-    box-shadow: 0 1px 0 0 #745474;
+    border-bottom: 1px solid #C9B8E5;
+    box-shadow: 0 1px 0 0 #C9B8E5;
 }
 
 /* Active/Inactive Invalid input label color */
@@ -185,7 +184,7 @@
 .input-field textarea.invalid:focus + label,
 .input-field textarea.invalid ~ .helper-text::after,
 .input-field textarea.invalid:focus ~ .helper-text::after {
-    color: #745474;
+    color: #C9B8E5;
 }
 
 /* Active/Inactive Valid input field color */
@@ -193,8 +192,8 @@
 .input-field input[type].valid:focus,
 .input-field textarea.valid,
 .input-field textarea.valid:focus {
-    border-bottom: 1px solid #745474;
-    box-shadow: 0 1px 0 0 #745474;
+    border-bottom: 1px solid #C9B8E5;
+    box-shadow: 0 1px 0 0 #C9B8E5;
 }
 
 /* Active/Inactive Valid input label color */
@@ -204,39 +203,39 @@
 .input-field textarea.valid:focus + label,
 .input-field textarea.valid ~ .helper-text::after,
 .input-field textarea.valid:focus ~ .helper-text::after {
-    color: #745474;
+    color: #C9B8E5;
 }
 
 /* Estilos el nav (barra inferior) y para el menu de contenidos cuando se le hace click */
 li.indicator {
     height: 4px !important;
-    background-color: #523a52 !important;
+    background-color: #9A83C9 !important;
 }
 
 .collapsible-header-clicked{
-    background-color: #523a52 !important;
+    background-color: #9A83C9 !important;
     color: #dfdfdf !important;
     font-weight: 600;
 }
 
 /*Estilos para el color del titulo de las cards de contenido*/
 .colorCardTitleContent{
-    background-color: #996D99 !important;
+    background-color: #8B77B5 !important;
 }
 
 /*Estilos del boton de ayuda*/
 .colorButtonHelpUnit {
-    background-color: #996D99 !important;
+    background-color: #8B77B5 !important;
     
     &:hover{
-        background-color: #583f58 !important;
+        background-color: #6A5693 !important;
     }
 }
 
 /*Para el elemento de blockquote*/
 blockquote {
     margin: 0 0 20px 0 !important;
-    border-left: 5px solid #996D99;
+    border-left: 5px solid #B19CD9;
     font-weight: 500 !important;
     border-radius: 0 10px 10px 0;
     padding: 20px;
