--- a/css/colors/unidad5/estilo_claro.css
+++ b/css/colors/unidad5/estilo_claro.css
@@ -1,35 +1,35 @@
 /*Colores de unidad 5*/
 .navUnit5{
-    background-color: #78819e;
+    background-color: #8494C9;
 }
 
 .nav-superiorUnit5{
-    background-color: #919bbd !important;
+    background-color: #95A3D8 !important;
 }
 
 .footerDesignUnit5{
-    border-bottom: #919bbd 30px solid !important;
+    border-bottom: #BFC9E8 30px solid !important;
 }
 
 .leftBorderUnit5{
-    border-left: #919bbd 10px solid !important;
+    border-left: #A7B4E6 10px solid !important;
     transition: all .2s ease;
     font-weight: 600;
 }
 
 .leftBorderSecondaryUnit5{
-    border-left: #b5c1eb 10px solid !important;
+    border-left: #BFC9F2 10px solid !important;
     transition: all .2s ease;
 }
 
 .leftBorderUnit5:hover, .leftBorderSecondaryUnit5:hover{
     background-color: rgb(202, 202, 202);
-    border-left: #697088 20px solid !important;
+    border-left: #7383B8 20px solid !important;
 }
 
 .activeLinkOptionsContentUnit5 {
-    background-color: #5b6175;
-    border-left: #2c2f3a 20px solid !important;
+    background-color: #8494C9;
+    border-left: #6272A6 20px solid !important;
     font-weight: 600;
     color: #fff !important;
 }
@@ -39,7 +39,7 @@
 }
 
 .leftBorderOnUnit5{
-    border-left: #919bbd 10px solid !important;
+    border-left: #D4DBF2 10px solid !important;
     background-color: rgb(209, 209, 209);
     font-weight: 700;
     transition: all .1s ease;
@@ -50,9 +50,9 @@
 	--hue: 223;
 	--bg: hsl(var(--hue),10%,90%);
 	--fg: hsl(var(--hue),10%,10%);
-	--primary: #697088;
-	--primary-l: #919bbd;
-	--primary-d: #919bbd;
+	--primary: #A7B4DB;
+	--primary-l: #BFC9E8;
+	--primary-d: #D4DBF2;
 	--white: hsl(var(--hue),10%,100%);
 	--white-d: hsl(var(--hue),10%,45%);
 }
@@ -60,12 +60,12 @@
 
 /*Menu lateral de textos*/
 .leftBorderUnit5Menu{
-    border-bottom: #697088 70px solid !important;
+    border-bottom: #A7B4DB 70px solid !important;
     overflow-x: hidden;
 }
 
 .activeButtonTextLateral{
-    border-left: 10px #737b96 solid;
+    border-left: 10px #D4DBF2 solid;
     background-color: #e9e9e9;
     border-radius: 5px;
     transition: all .1s ease-in-out;
@@ -75,7 +75,7 @@
 }
 
 .lateralMenuAdjustTextTitle{
-    background-color: #697088;
+    background-color: #A7B4DB;
     position: relative;
     top: -10px;
     left: -10px;
@@ -133,18 +133,18 @@
 
 .activeLinkOptionsContentUnit5Mobile{
     background-color: #dfdfdf;
-    border-left: #919bbd 10px solid !important;
+    border-left: #D4DBF2 10px solid !important;
     color: #292929;
     font-weight: 600;
 }
 
 #barraPreguntas,
 #barraPreguntas2 {
-    background: rgb(146,166,233);
-    background: -moz-linear-gradient(90deg, rgba(146,166,233,1) 17%, rgba(126,136,168,1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(146,166,233,1) 17%, rgba(126,136,168,1) 100%);
-    background: linear-gradient(90deg, rgba(146,166,233,1) 17%, rgba(126,136,168,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#92a6e9",endColorstr="#7e88a8",GradientType=1); 
+    background: rgb(212, 219, 242);
+    background: -moz-linear-gradient(90deg, rgba(212, 219, 242, 1) 17%, rgba(167, 180, 219, 1) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(212, 219, 242, 1) 17%, rgba(167, 180, 219, 1) 100%);
+    background: linear-gradient(90deg, rgba(212, 219, 242, 1) 17%, rgba(167, 180, 219, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#D4DBF2",endColorstr="#A7B4DB",GradientType=1); 
     height: 20px;
     border-radius: 5px;
     width: 0px;
@@ -157,14 +157,14 @@
 .input-field input[type]:focus:not([readonly]),
 .input-field textarea:not([readonly]),
 .input-field textarea:focus:not([readonly]) {
-    border-bottom: 1px solid #78819e;
-    box-shadow: 0 1px 0 0 #78819e;
+    border-bottom: 1px solid #BFC9E8;
+    box-shadow: 0 1px 0 0 #BFC9E8;
 }
 
 /* Inactive/Active Default input label color */
 .input-field input[type]:focus:not([readonly]) + label,
 .input-field textarea:focus:not([readonly]) + label {
-    color: #78819e;
+    color: #BFC9E8;
 }
 
 /* Active/Inactive Invalid input field colors */
@@ -172,8 +172,8 @@
 .input-field input[type].invalid:focus,
 .input-field textarea.invalid,
 .input-field textarea.invalid:focus {
-    border-bottom: 1px solid #78819e;
-    box-shadow: 0 1px 0 0 #78819e;
+    border-bottom: 1px solid #BFC9E8;
+    box-shadow: 0 1px 0 0 #BFC9E8;
 }
 
 /* Active/Inactive Invalid input label color */
@@ -183,7 +183,7 @@
 .input-field textarea.invalid:focus + label,
 .input-field textarea.invalid ~ .helper-text::after,
 .input-field textarea.invalid:focus ~ .helper-text::after {
-    color: #78819e;
+    color: #BFC9E8;
 }
 
 /* Active/Inactive Valid input field color */
@@ -191,8 +191,8 @@
 .input-field input[type].valid:focus,
 .input-field textarea.valid,
 .input-field textarea.valid:focus {
-    border-bottom: 1px solid #78819e;
-    box-shadow: 0 1px 0 0 #78819e;
+    border-bottom: 1px solid #BFC9E8;
+    box-shadow: 0 1px 0 0 #BFC9E8;
 }
 
 /* Active/Inactive Valid input label color */
@@ -202,39 +202,39 @@
 .input-field textarea.valid:focus + label,
 .input-field textarea.valid ~ .helper-text::after,
 .input-field textarea.valid:focus ~ .helper-text::after {
-    color: #78819e;
+    color: #BFC9E8;
 }
 
 /* Estilos el nav (barra inferior) y para el menu de contenidos cuando se le hace click */
 li.indicator {
     height: 4px !important;
-    background-color: #565d72 !important;
+    background-color: #6F7DAF !important;
 }
 
 .collapsible-header-clicked{
-    background-color: #565d72 !important;
+    background-color: #6F7DAF !important;
     color: #dfdfdf !important;
     font-weight: 600;
 }
 
 /*Estilos para el color del titulo de las cards de contenido*/
 .colorCardTitleContent{
-    background-color: #78819e !important;
+    background-color: #8494C9 !important;
 }
 
 /*Estilos del boton de ayuda*/
 .colorButtonHelpUnit {
-    background-color: #78819e !important;
+    background-color: #8494C9 !important;
     
     &:hover{
-        background-color: #464c5f !important;
+        background-color: #6272A6 !important;
     }
 }
 
 /*Para el elemento de blockquote*/
 blockquote {
     margin: 0 0 20px 0 !important;
-    border-left: 5px solid #78819e;
+    border-left: 5px solid #A7B4DB;
     font-weight: 500 !important;
     border-radius: 0 10px 10px 0;
     padding: 20px;
