--- a/css/scss/assets/_cards.scss
+++ b/css/scss/assets/_cards.scss
@@ -108,38 +108,38 @@
 	height: auto;
 }
 #a1 {
-	border-bottom: 20px #7ea793 solid;
+	border-bottom: 20px #9CD1B8 solid;
 	&:hover {
 		padding: 10px 20px 20px 20px;
-		border-bottom: 40px #335546 solid;
+		border-bottom: 40px #6BA08D solid;
 	}
 }
 #a2 {
-	border-bottom: 20px #b87c82 solid;
+	border-bottom: 20px #E99DA5 solid;
 	&:hover {
 		padding: 10px 20px 20px 20px;
-		border-bottom: 40px #643f42 solid;
+		border-bottom: 40px #D77A86 solid;
 	}
 }
 #a3 {
-	border-bottom: 20px #9b719b solid;
+	border-bottom: 20px #B19CD9 solid;
 	&:hover {
 		padding: 10px 20px 20px 20px;
-		border-bottom: 40px #5f405f solid;
+		border-bottom: 40px #9A83C9 solid;
 	}
 }
 #a4 {
-	border-bottom: 20px #da7e74 solid;
+	border-bottom: 20px #F0A399 solid;
 	&:hover {
 		padding: 10px 20px 20px 20px;
-		border-bottom: 40px #854e48 solid;
+		border-bottom: 40px #D77A70 solid;
 	}
 }
 #a5 {
-	border-bottom: 20px #b5c1eb solid;
+	border-bottom: 20px #A7B4DB solid;
 	&:hover {
 		padding: 10px 20px 20px 20px;
-		border-bottom: 40px #2c344d solid;
+		border-bottom: 40px #8896C7 solid;
 	}
 }
 
@@ -241,7 +241,7 @@
     border-radius: 50%;
     display: inline-flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
     margin-right: 15px;
 }
 
